Commit nextstage with all images.

--- a/index.html
+++ b/index.html
@@ -6,17 +6,22 @@
     <title>Broadway Design</title>
   </head>
   <body>
-    <h1>Broadway Design</h1>
-    <h5>Home</h5>
-    <h5>Process</h5>
-    <h5>Work</h5>
-    <h5>Team</h5>
-    <h5>Contact</h5>
+    <div style="background-image: url(/Users/beavaca/WebDev/broadway/resources/images/the-flatiron-building.png)">
+      <h1>Broadway Design</h1>
+      <h5>Home</h5>
+      <h5>Process</h5>
+      <h5>Work</h5>
+      <h5>Team</h5>
+      <h5>Contact</h5>
+    </div>
     <h2>Our Process</h2>
+    <p><img src="resources/icons/identify.svg"/></p>
     <h3>Identify</h3>
     <p>We focus on the most important details</p>
+    <p><img src="resources/icons/understand.svg"/></p>
     <h3>Understand</h3>
     <p>We study our projects inside and out.</p>
+    <p><img src="resources/icons/execute.svg"/></p>
     <h3>Execute</h3>
     <p>We put everything we have into our work</p>
     <h4>Designed in New York</h4>
@@ -28,6 +33,6 @@
     <p>Phone: (555)-555-5555</p>
     <p>E-mail: test@example.com</p>
     <p>Twitter: @test</p>
-    <h6>&copy; Broadway 2016 Home About Work Team Contact</h6>
+    <div class="footer">&copy; Broadway 2016 <strong><u>Home About Work Team Contact</u></strong></div>
   </body>
 </html>
