Commit next stage with image link fixes.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Broadway Design</title>
   </head>
   <body>
-    <div style="background-image: url(/Users/beavaca/WebDev/broadway/resources/images/the-flatiron-building.png)">
+    <div class="header">
       <h1>Broadway Design</h1>
       <h5>Home</h5>
       <h5>Process</h5>
