--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h5>Process</h5>
       <h5>Work</h5>
       <h5>Team</h5>
-      <h5>Contact</h5>
+      <h5 style="padding-bottom: 12px">Contact</h5>
     </div>
     <h2>Our Process</h2>
     <p><img src="resources/icons/identify.svg"/></p>
